<resources>
    <string name="type_here">Type here:</string>
    <string name="tester_app_name">SyncProxy Tester</string>
    <string name="connect">Connect</string>
    <string name="speak">Speak</string>
    <string name="slider_footer">Slider Footer</string>
    <string name="softbutton_type">Type:</string>
    <string name="softbutton_text">Text (if TEXT or BOTH):</string>
    <string name="softbutton_image">Image (if IMAGE or BOTH):</string>
    <string name="softbutton_isHighlighted">Highlighted?</string>
    <string name="softbutton_useSystemAction">Use System Action</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_soft_buttons_list">SoftButtons List</string>
    <string name="title_activity_soft_button_edit">Edit SoftButton</string>
    <string name="title_activity_choice_list">Choice List</string>
    <string name="title_activity_choice_edit">Edit Choice</string>
    <string name="delete_icon_desc">Delete icon</string>
    <string name="softbutton_id">Id:</string>
    <string name="updateturnlist_turnList">Turn List (comma-separated)</string>
    <string name="updateturnlist_defaultTurnList">Turn Left,Turn Right,Go Forward</string>
    <string name="includeSoftButtons">Include</string>
    <string name="softButtons">Soft Buttons</string>
    <string name="updateturnlist_iconList">Icon List (comma-separated, one for each turn)</string>
    <string name="updateturnlist_defaultIconList">turn_left.png,turn_right.png,turn_forward.png</string>
    <string name="addcommand_iconFilename">action.png</string>
    <string name="addcommand_commandID">Command ID</string>
    <string name="addcommand_commandIDDefault">42</string>
    <string name="addcommand_useMenuParams">Menu Params</string>
    <string name="addcommand_useCommandName">Command to add to menu</string>
    <string name="addcommand_commandNameDefault">Item To Add</string>
    <string name="addcommand_vrSynonym">VR Synonyms (comma-separated)</string>
    <string name="addcommand_vrSynonymDefault">synonym1,synonym2</string>
    <string name="addcommand_useParentID">Add this item to:</string>
    <string name="addcommand_useIcon">Use icon:</string>
    <string name="addcommand_menuPos">Menu Position</string>
    <string name="addcommand_menuPosDefault">1000</string>
    <string name="performinteraction_initialText">Initial Text</string>
    <string name="performinteraction_initialTextDefault">Pick number:</string>
    <string name="performinteraction_initialPrompt">Initial Prompt (comma-separated)</string>
    <string name="performinteraction_initialPromptDefault">Pick a command</string>
    <string name="performinteraction_interactionMode">Interaction Mode</string>
    <string name="performinteraction_interactionChoiceSetID">Choise Set IDs</string>
    <string name="performinteraction_helpPrompt">Help prompt (comma-separated)</string>
    <string name="performinteraction_helpPromptDefault">help me,I\'m melting</string>
    <string name="performinteraction_timeoutPrompt">Timeout prompt (comma-separated)</string>
    <string name="performinteraction_timeoutPromptDefault">hurry it up</string>
    <string name="performinteraction_vrHelp">VR Help Items (all comma-separated)</string>
    <string name="performinteraction_vrHelpItemPosDefault">1,2,3</string>
    <string name="performinteraction_vrHelpItemDefault">VR help item,Help Item 2,third item</string>
    <string name="performinteraction_vrHelpItemImageDefault">action.png,action.png,action.png</string>
    <string name="performinteraction_timeout">Timeout</string>
    <string name="performinteraction_timeoutDefault">10000</string>
    <string name="performinteraction_interactionLayout">Interaction Layout</string>
    <string name="show_mainField1">Main Field 1</string>
    <string name="show_mainField1Default">Show Line 1</string>
    <string name="show_mainField2">Main Field 2</string>
    <string name="show_mainField2Default">Show Line 2</string>
    <string name="show_mainField3">Main Field 3</string>
    <string name="show_mainField3Default">Show Line 3</string>
    <string name="show_mainField4">Main Field 4</string>
    <string name="show_mainField4Default">Show Line 4</string>
    <string name="show_textAlignment">Text Alignment</string>
    <string name="show_statusBar">Status Bar</string>
    <string name="show_statusBarDefault">status bar</string>
    <string name="show_mediaTrack">Media Track</string>
    <string name="show_mediaTrackDefault">Media Track</string>
    <string name="show_mediaClock">Media Clock</string>
    <string name="show_mediaClockDefault">12:34</string>
    <string name="show_graphic">Graphic</string>
    <string name="show_graphicDefault">action.png</string>
    <string name="show_secondaryGraphic">Secondary Graphic</string>
    <string name="show_secondaryGraphicDefault">action.png</string>
    <string name="show_customPresets">Custom Presets (comma-separated)</string>
    <string name="show_customPresetsDefault">GEN0,GEN1,GEN2,GEN3,GEN4,GEN5</string>
    <string name="selectprotocol_media">Media</string>
    <string name="selectprotocol_appName">App name:</string>
    <string name="selectprotocol_appIdCustom">Custom App ID:</string>
    <string name="selectprotocol_appNameDefault">SyncProxyTester</string>
    <string name="selectprotocol_appIdDefault">SyncProxyTester</string>
    <string name="selectprotocol_sourceMP4">MP4</string>
    <string name="selectprotocol_sourceH264">H264</string>
    <string name="selectprotocol_lang">Language:</string>
    <string name="selectprotocol_hmiLang">HMI language:</string>
    <string name="selectprotocol_wifi">WiFi</string>
    <string name="selectprotocol_bluetooth">Bluetooth</string>
    <string name="selectprotocol_usb">USB</string>
    <string name="selectprotocol_ipAddress">IP address:</string>
    <string name="selectprotocol_ipAddressDefault">10.10.0.1</string>
    <string name="selectprotocol_tcpPort">Port:</string>
    <string name="selectprotocol_tcpPortDefault">12345</string>
    <string name="selectprotocol_extraOptions">Extra Options</string>
    <string name="selectprotocol_autoSetAppIcon">Set app icon after registration</string>
    <string name="createinteractionchoiceset_choiceVRSynonym">VR Synonyms (comma-separated)</string>
    <string name="createinteractionchoiceset_secondaryText">Secondary Text</string>
    <string name="createinteractionchoiceset_tertiaryText">Tertiary Text</string>
    <string name="createinteractionchoiceset_choiceUseImage">Use image:</string>
    <string name="createinteractionchoiceset_choiceSecondaryUseImage">Use secondary image:</string>
    <string name="createinteractionchoiceset_choice1">Choice 1</string>
    <string name="createinteractionchoiceset_choice1Default">1st item</string>
    <string name="createinteractionchoiceset_choice1VRDefault">Command one,1st command</string>
    <string name="createinteractionchoiceset_choice1ImageValue">turn_left.png</string>
    <string name="createinteractionchoiceset_choice1ImageValueSecondary">turn_left_secondary.png</string>
    <string name="createinteractionchoiceset_choice2">Choice 2</string>
    <string name="createinteractionchoiceset_choice2Default">2nd item</string>
    <string name="createinteractionchoiceset_choice2VRDefault">Command two,2nd command</string>
    <string name="createinteractionchoiceset_choice2ImageValue">turn_right.png</string>
    <string name="createinteractionchoiceset_choice2ImageValueSecondary">turn_right_secondary.png</string>
    <string name="createinteractionchoiceset_choice3">Choice 3</string>
    <string name="createinteractionchoiceset_choice3Default">3rd item</string>
    <string name="createinteractionchoiceset_choice3VRDefault">Command three,third command</string>
    <string name="createinteractionchoiceset_choice3ImageValue">turn_forward.png</string>
    <string name="createinteractionchoiceset_choice3ImageValueSecondary">turn_forward_secondary.png</string>
    <string name="showconstanttbt_navText1">Navigation Text 1</string>
    <string name="showconstanttbt_navText1Default">Navigation Text 1</string>
    <string name="showconstanttbt_navText2">Navigation Text 2</string>
    <string name="showconstanttbt_navText2Default">Navigation Text 2</string>
    <string name="showconstanttbt_eta">ETA</string>
    <string name="showconstanttbt_etaDefault">12:34</string>
    <string name="showconstanttbt_timeToDestination">Time To Destination</string>
    <string name="showconstanttbt_timeToDestinationDefault">08:88</string>
    <string name="showconstanttbt_totalDistance">Total Distance</string>
    <string name="showconstanttbt_totalDistanceDefault">100 Miles</string>
    <string name="showconstanttbt_turnIconCheck">Use Turn Icon</string>
    <string name="showconstanttbt_turnIconValue">turn_right.png</string>
    <string name="showconstanttbt_nextTurnIconCheck">Use Next Turn Icon</string>
    <string name="showconstanttbt_nextTurnIconValue">turn_left.png</string>
    <string name="showconstanttbt_distanceToManeuver">Distance To Maneuver</string>
    <string name="showconstanttbt_distanceToManeuverDefault">50</string>
    <string name="showconstanttbt_distanceToManeuverScale">Distance To Maneuver Scale</string>
    <string name="showconstanttbt_distanceToManeuverScaleDefault">100</string>
    <string name="showconstanttbt_useManeuverComplete">Send</string>
    <string name="showconstanttbt_isManeuverComplete">Maneuver Complete?</string>
    <string name="encodedsyncpdata_filename">Local File Name</string>
    <string name="encodedsyncpdata_selectFileButton">…</string>
    <string name="addsubmenu_menuName">Submenu Name</string>
    <string name="addsubmenu_menuNameDefault">SubmenuName</string>
    <string name="addsubmenu_menuID">Submenu ID</string>
    <string name="addsubmenu_menuIDDefault">42</string>
    <string name="addsubmenu_menuPos">Submenu Position</string>
    <string name="addsubmenu_menuPosDefault">1000</string>
    <string name="setglobalproperties_helpPrompt">Help prompt (comma-separated)</string>
    <string name="setglobalproperties_helpPromptDefault">Help prompt 1,Second help prompt</string>
    <string name="setglobalproperties_timeoutPrompt">Timeout prompt (comma-separated)</string>
    <string name="setglobalproperties_timeoutPromptDefault">First timeout prompt,Another timeout prompt</string>
    <string name="setglobalproperties_vrHelpTitle">VR help title</string>
    <string name="setglobalproperties_vrHelpTitleDefault">This is the VR help title</string>
    <string name="setglobalproperties_vrHelp">VR Help Items (all comma-separated)</string>
    <string name="setglobalproperties_vrHelpItemPosDefault">1,2,3</string>
    <string name="setglobalproperties_vrHelpItemDefault">VR help item,Help Item 2,third item</string>
    <string name="setglobalproperties_vrHelpItemImageDefault">action.png,action.png,action.png</string>
    <string name="setglobalproperties_menuTitle">Menu Title</string>
    <string name="setglobalproperties_menuTitleDefault">Menu111</string>
    <string name="getdtcs_ecuName">ECU Name</string>
    <string name="getdtcs_ecuNameDefault">2000</string>
    <string name="getdtcs_dtcMask">DTC Mask</string>
    <string name="getdtcs_dtcMaskDefault">42</string>
    <string name="alert_textToSpeak">To Speak</string>
    <string name="alert_textToSpeakDefault">Text To Speak</string>
    <string name="alert_line1">Line 1</string>
    <string name="alert_line1Default">Alert Line 1</string>
    <string name="alert_line2">Line 2</string>
    <string name="alert_line2Default">Alert Line 2</string>
    <string name="alert_line3">Line 3</string>
    <string name="alert_line3Default">Alert Line 3</string>
    <string name="alert_durationDefault">5000</string>
    <string name="alert_usePlayTone">Play Tone</string>
    <string name="alert_useProgressIndicator">Progress Indicator</string>
</resources>