<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/performinteraction_Root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="400dp"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/performinteraction_initialText"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
                android:id="@+id/performinteraction_initialText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:freezesText="true"
                android:inputType="textCapSentences"
                android:maxLength="500"
                android:text="@string/performinteraction_initialTextDefault"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/performinteraction_initialPrompt"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
                android:id="@+id/performinteraction_initialPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:freezesText="true"
                android:inputType="textCapWords"
                android:maxLength="2500"
                android:text="@string/performinteraction_initialPromptDefault"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/performinteraction_interactionMode"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
                android:id="@+id/performinteraction_interactionModeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/performinteraction_choiceSetIDs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/performinteraction_interactionChoiceSetID"/>

        <CheckBox
                android:id="@+id/performinteraction_helpPromptCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/performinteraction_helpPrompt"/>

        <EditText
                android:id="@+id/performinteraction_helpPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:inputType="textCapSentences"
                android:text="@string/performinteraction_helpPromptDefault"/>

        <CheckBox
                android:id="@+id/performinteraction_timeoutPromptCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/performinteraction_timeoutPrompt"/>

        <EditText
                android:id="@+id/performinteraction_timeoutPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:inputType="textCapSentences"
                android:text="@string/performinteraction_timeoutPromptDefault"/>

        <CheckBox
                android:id="@+id/performinteraction_timeoutCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/performinteraction_timeout"/>

        <EditText
                android:id="@+id/performinteraction_timeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:inputType="number"
                android:maxLength="6"
                android:text="@string/performinteraction_timeoutDefault"/>

        <CheckBox
                android:id="@+id/performinteraction_vrHelpItemCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/performinteraction_vrHelp"/>

        <EditText
                android:id="@+id/performinteraction_vrHelpItemPos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="text"
                android:text="@string/performinteraction_vrHelpItemPosDefault"/>

        <EditText
                android:id="@+id/performinteraction_vrHelpItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:inputType="textCapSentences"
                android:text="@string/performinteraction_vrHelpItemDefault"/>

        <EditText
                android:id="@+id/performinteraction_vrHelpItemImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:inputType="textCapSentences"
                android:text="@string/performinteraction_vrHelpItemImageDefault"/>

        <CheckBox
                android:id="@+id/performinteraction_interactionLayoutCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/performinteraction_interactionLayout"/>

        <Spinner
                android:id="@+id/performinteraction_interactionLayoutSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>