<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/itemRoot"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
              android:layout_marginRight="10dip"
              android:minWidth="300dp"
              android:orientation="vertical"
              android:paddingLeft="20dip"
              android:paddingRight="20dip">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/alert_textToSpeak"/>

    <EditText
            android:text="@string/alert_textToSpeakDefault"
            android:id="@+id/txtSpeak"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:freezesText="true"
            android:maxLength="500"
            android:inputType="textCapWords"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/alert_line1"/>

    <EditText
            android:text="@string/alert_line1Default"
            android:id="@+id/txtAlertField1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:freezesText="true"
            android:maxLength="500"
            android:inputType="textCapWords"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/alert_line2"/>

    <EditText
            android:text="@string/alert_line2Default"
            android:id="@+id/txtAlertField2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:freezesText="true"
            android:maxLength="500"
            android:inputType="textCapWords"/>

    <TextView
            android:id="@+id/alert_line3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/alert_line3"/>

    <EditText
            android:text="@string/alert_line3Default"
            android:id="@+id/txtAlertField3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:freezesText="true"
            android:maxLength="500"
            android:inputType="textCapWords"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/alert_duration"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDuration"
                    android:text="@string/alert_durationDefault"
                    android:maxLength="5"
                    android:inputType="number"/>
        </LinearLayout>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkPlayTone"
                android:text="@string/alert_usePlayTone"
                android:checked="true"/>

    </LinearLayout>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alert_useProgressIndicator"
            android:text="@string/alert_useProgressIndicator"
            android:checked="true"/>

    <LinearLayout
            android:id="@+id/alert_softButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
                android:id="@+id/chkIncludeSBs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/includeSoftButtons"/>

        <Button
                android:id="@+id/alert_btnSoftButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/softButtons"/>

    </LinearLayout>

</LinearLayout>