<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/itemRoot"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
              android:layout_marginRight="10dip"
              android:minWidth="300dp"
              android:orientation="vertical"
              android:paddingLeft="20dip"
              android:paddingRight="20dip">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/getdtcs_ecuName"/>

    <EditText
            android:id="@+id/getdtcs_txtECUNameDTC"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:inputType="number"
            android:maxLength="5"
            android:text="@string/getdtcs_ecuNameDefault"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/getdtcs_dtcMask"/>

    <EditText
            android:id="@+id/getdtcs_dtcMask"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:inputType="number"
            android:maxLength="3"
            android:text="@string/getdtcs_dtcMaskDefault"/>

</LinearLayout>